--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-#map {
-    height: 92vh;
-}
-
 a {
     text-decoration: inherit;
     color: black
@@ -11,6 +7,25 @@ a:hover {
     text-decoration: none;
 }
 
-.userRow {
-    height: 85vh
+
+/* .userRow {
+    height: 85vh;
+    overflow: auto
+} */
+
+#mapsection {
+    height: 88vh;
+}
+
+#map {
+    height: 85vh;
+}
+
+@media screen and (max-width: 576px) {
+    #mapsection {
+        height: 92vh;
+    }
+    #map {
+        height: 92vh;
+    }
 }
